UK localization update and Hungary Update
-Changed the localization of the UK tree (gave better names and actual descriptions :/ )

-Changed like one icon in the actual UK.txt file

-Added the Hungary.txt (normal focus tree without dlc) and the Hungary_wuw.txt (tree with focus tree)

-Removed all text in the Hungary.txt and set it to only use Hungary_wuw. In Hungary_wuw, i also removed all the unhist paths

--- a/localisation/english/uk_rework_l_english.yml
+++ b/localisation/english/uk_rework_l_english.yml
@@ -1,34 +1,35 @@
 ﻿l_english:
  uk_fortify_the_empire_focus:0 "Fortify the Empire"
- uk_fortify_the_empire_focus_desc:0 "Fortify the Empire"
- uk_fortress_rock:0 "Fortress Rock"
- uk_fortress_rock_desc:0 "Fortress Rock"
+ uk_fortify_the_empire_focus_desc:0 "The safety of the Empire depends on strong defenses across all its territories. By investing in fortifications and garrisons, we ensure that every colony and dominion can withstand enemy attacks and remain loyal to the Crown."
+ uk_fortress_rock:0 "Gateway to the Mediterranean"
+ uk_fortress_rock_desc:0 "Gibraltar commands the entrance to the Mediterranean, making it crucial for controlling naval traffic and protecting Allied supply lines. By fortifying the Rock, we ensure this gateway remains firmly in our hands, denying the Axis any chance of gaining a foothold."
  uk_develop_egypt_focus:0 "Develop Egypt"
- uk_develop_egypt_focus_desc:0 "Develop Egypt"
- uk_cyprus_focus:0 "Focus on Cyprus"
- uk_cyprus_focus_desc:0 "Focus on Cyprus"
- sp_rubber_focus:0 "Focus on Rubber"
- sp_rubber_focus_desc:0 "Focus on Rubber"
+ uk_develop_egypt_focus_desc:0 "Egypt is a linchpin of British power in North Africa, yet much of its potential remains untapped. By investing in infrastructure and industry, we can strengthen our regional presence, secure vital resources, and support operations across the desert."
+ uk_cyprus_focus:0 "Fortify Cyprus"
+ uk_cyprus_focus_desc:0 "Control of Cyprus is key to maintaining dominance in the Eastern Mediterranean. Strengthening its defenses will protect vital sea lanes and provide a secure base for Allied operations.
+ sp_rubber_focus:0 "Develop Malaysian Rubber"
+ sp_rubber_focus_desc:0 "Rubber is essential for keeping our vehicles and machinery running, yet supplies are limited. Expanding production in Malaya will strengthen our war effort and safeguard this critical resource from disruption."
  gibraltar_of_asia:0 "Gibraltar of Asia"
- gibraltar_of_asia_desc:0 "Gibraltar of Asia"
+ gibraltar_of_asia_desc:0 "Singapore is the key to controlling the seas of Southeast Asia and defending our Far Eastern interests. By fortifying the island, we create an impregnable stronghold, securing vital trade routes and deterring any enemy advance."
  uk_tank_discount_focus:0 "Royal Tank Factories"
- uk_tank_discount_focus_desc:0 "Royal Tank Factories"
+ uk_tank_discount_focus_desc:0 "To maintain our edge on the battlefield, Britain must expand its armored production. By building and modernizing tank factories, we will equip our forces with the vehicles needed to face any threat and support operations worldwide."
  ENG_scandinavian_intervention:0 "Scandinavian Intervention"
- ENG_scandinavian_intervention_desc:0 "Scandinavian Intervention"
- ENG_norway_intervention:0 "Norway Intervention"
- ENG_norway_intervention_desc:0 "Norway Intervention"
- ENG_denmark_intervention:0 "Denmark Intervention"
- ENG_denmark_intervention_desc:0 "Denmark Intervention"
+ ENG_scandinavian_intervention_desc:0 "The fate of Scandinavia is too important to remain neutral while the Axis expands. By intervening in the region, we secure vital resources and strategic positions, preventing enemy domination and bolstering Allied control in the north."
+ ENG_norway_intervention:0 "Pressure Norway to Align"
+ ENG_norway_intervention_desc:0 "Through diplomatic leverage and subtle coercion, we can persuade Norway to abandon its neutrality. By aligning with the Allies, Norway will serve as a crucial bulwark against Axis expansion in northern Europe."
+ ENG_denmark_intervention:0 "Pressure Denmark to Align"
+ ENG_denmark_intervention_desc:0"Through diplomatic leverage and subtle coercion, we can persuade Denmark to abandon its neutrality. By aligning with the Allies, Denmark will serve as a crucial bulwark against Axis expansion in northern Europe."
  ENG_sweden_intervention:0 "Sweden Intervention"
- ENG_sweden_intervention_desc:0 "Sweden Intervention"
+ ENG_sweden_intervention_desc:0 "Sweden's resources and strategic position cannot be left vulnerable to Axis influence. By intervening, we secure critical iron and industrial centers, denying the enemy vital materials and strengthening the Allied war effort."
  ENG_french_alliance:0 "French Alliance"
- ENG_french_alliance_desc:0 "French Alliance"
- ENG_annex_ireland:0 "Annex Ireland"
- ENG_annex_ireland_desc:0 "Annex Ireland"
+ ENG_french_alliance_desc:0 "Though our nations have had their differences, the threat of tyranny demands unity. By strengthening our bonds with France, we can stand together as a bulwark against aggression on the continent."
+ ENG_annex_ireland:0 "Secure Ireland"
+ ENG_annex_ireland_desc:0 "The time for leniency has passed—Irish neutrality can no longer be tolerated in these perilous times. By bringing Ireland under direct British control, we will secure our western flank and ensure the safety of the Isles."
  ENG_ireland_friendship:0 "Befriend Ireland"
- ENG_ireland_friendship_desc:0 "Befriend Ireland"
+ ENG_ireland_friendship_desc:0 "Rather than confrontation, diplomacy shall guide our path with Ireland. By fostering mutual respect and cooperation, we can mend old wounds and strengthen the unity of the British Isles."
  ENG_embargo_axis:0 "Embargo the Axis"
- ENG_embargo_axis_desc:0 "Embargo the Axis"
+ ENG_embargo_axis_desc:0 "With tensions mounting across Europe, we shall sever the flow of vital resources to the Axis powers. By imposing a strict embargo, we will weaken their war machines and assert our economic might in defense of freedom."
+
 
 
 
@@ -36,7 +37,7 @@
  british_tank_discount:0 "Royal Tank Factories"
  british_tank_discount_desc:0 "RoDevs WHY BRO"
  operation_husky:0 "Operation Husky"
- operation_husky_desc:0 "Operation Husky"
- battle_of_singapore:0 "Battle of Singapore"
- battle_of_singapore_desc:0 "Battle of Singapore"
+ operation_husky_desc:0 "It is now time for us to exploit the soft underbelly of Europe"
+ battle_of_singapore:0 "Defense of Singapore"
+ battle_of_singapore_desc:0 "Nothing matters more than our supply of rubber"
 
