fixed rodevs inability to fix code

--- a/localisation/english/usa_rework_l_english.yml
+++ b/localisation/english/usa_rework_l_english.yml
@@ -34,6 +34,8 @@
  USA_war_plan_violet_desc:0 "War Plan Violet"
  USA_war_plan_indigo:0 "War Plan Indigo"
  USA_war_plan_indigo_desc:0 "War Plan Indigo"
+ USA_tighten_control_over_the_islands:0 "Tighten Control Over the Islands"
+ USA_tighten_control_over_the_islands_desc:0 "Tighten Control Over the Islands"
 
  # FOCUS / AIR
  USA_tactics:0 "Tactics"
