USA army tree functionality done

--- a/localisation/english/usa_rework_l_english.yml
+++ b/localisation/english/usa_rework_l_english.yml
@@ -161,6 +161,47 @@
  USA_social_security_idea:0 "Social Security"
  USA_social_security_idea_desc:0 "Social Security Act"
 
+ # IDEAS / US ARMY
+ USA_the_army:0 "The Army"
+ USA_the_army_desc:0 "The Army"
+ USA_the_army_2:0 "The Army"
+ USA_the_army_2_desc:0 "The Army"
+ USA_the_army_tank:0 "The Army - Armored Warfare"
+ USA_the_army_tank_desc:0 "The Army - Armored Warfare"
+ USA_the_army_tank_2:0 "The Army - Armored Warfare"
+ USA_the_army_tank_2_desc:0 "The Army - Armored Warfare"
+ USA_the_army_tank_3:0 "The Army - Armored Warfare"
+ USA_the_army_tank_3_desc:0 "The Army - Armored Warfare"
+ USA_the_army_tank_4:0 "The Army - Armored Warfare"
+ USA_the_army_tank_4_desc:0 "The Army - Armored Warfare"
+ USA_the_army_tank_5:0 "The Army - Armored Warfare"
+ USA_the_army_tank_5_desc:0 "The Army - Armored Warfare"
+ USA_the_army_firepower:0 "The Army - Overwhelming Firepower"
+ USA_the_army_firepower_desc:0 "The Army - Overwhelming Firepower"
+ USA_the_army_firepower_2:0 "The Army - Overwhelming Firepower"
+ USA_the_army_firepower_2_desc:0 "The Army - Overwhelming Firepower"
+ USA_the_army_firepower_3:0 "The Army - Overwhelming Firepower"
+ USA_the_army_firepower_3_desc:0 "The Army - Overwhelming Firepower"
+ USA_the_army_firepower_4:0 "The Army - Overwhelming Firepower"
+ USA_the_army_firepower_4_desc:0 "The Army - Overwhelming Firepower"
+ USA_the_army_firepower_5:0 "The Army - Overwhelming Firepower"
+ USA_the_army_firepower_5_desc:0 "The Army - Overwhelming Firepower"
+ USA_the_army_battleplan:0 "The Army - Grand Battleplan"
+ USA_the_army_battleplan_desc:0 "The Army - Grand Battleplan"
+ USA_the_army_battleplan_2:0 "The Army - Grand Battleplan"
+ USA_the_army_battleplan_2_desc:0 "The Army - Grand Battleplan"
+ USA_the_army_battleplan_3:0 "The Army - Grand Battleplan"
+ USA_the_army_battleplan_3_desc:0 "The Army - Grand Battleplan"
+ USA_the_army_battleplan_4:0 "The Army - Grand Battleplan"
+ USA_the_army_battleplan_4_desc:0 "The Army - Grand Battleplan"
+ USA_the_army_battleplan_5:0 "The Army - Grand Battleplan"
+ USA_the_army_battleplan_5_desc:0 "The Army - Grand Battleplan"
+ USA_doctrine_advancements_army_idea:0 "Doctrine Advancements"
+ USA_doctrine_advancements_army_idea_desc:0 "Doctrine Advancements"
+ USA_motorized_carriages_idea:0 "Motorized Carriages"
+ USA_motorized_carriages_idea_desc:0 "Motorized Carriages"
+
+
  # IDEAS / WAR PLANS
  USA_focus_on_asia_idea:0 "Focus on Asia"
  USA_focus_on_asia_idea_desc:0 "Focus on Asia"
