nvm NOW functionality is finished

--- a/localisation/english/usa_rework_l_english.yml
+++ b/localisation/english/usa_rework_l_english.yml
@@ -65,8 +65,8 @@
  USA_lightning_war_desc:0 "Lightning War"
  USA_shock_and_awe:0 "§7Shock and Awe§!"
  USA_shock_and_awe_desc:0 "Shock and Awe"
- USA_broad_front:0 "§7Broad Front§!"
- USA_broad_front_desc:0 "Broad Front"
+ USA_broad_front:0 "§7Grand Assault§!"
+ USA_broad_front_desc:0 "Grand Assault"
 
 
 # FOCUS / WAR PLANS 
